chage connection string to the cloud

--- a/Assert.API/appsettings.json
+++ b/Assert.API/appsettings.json
@@ -13,7 +13,8 @@
     "TimeLife": 30
   },
   "ConnectionStrings": {
-    "AssertDB": "Server=.;Database=AssertDB;uid=assert_user;pwd=Passw0rd;Trusted_Connection=False;TrustServerCertificate=True" //TEST
+    //"AssertDB": "Server=.;Database=AssertDB;uid=assert_user;pwd=Passw0rd;Trusted_Connection=False;TrustServerCertificate=True" //TEST
+    "AssertDB": "Server=35.193.165.194;Database=assertdb;uid=assertdb-user;pwd=Fdgsh2025%;Trusted_Connection=False;TrustServerCertificate=True" //TEST CLOUD
   },
   "SystemConfiguration": {
     "AllowedOrigins": [
