--- a/Assert.Domain/Assert.Domain.csproj
+++ b/Assert.Domain/Assert.Domain.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Assert.Shared\Assert.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
