--- a/Assert.API/appsettings.json
+++ b/Assert.API/appsettings.json
@@ -17,12 +17,20 @@
   },
   "ConnectionStrings": {
     //"AssertDB": "Server=.;Database=AssertDB;uid=assert_user;pwd=Passw0rd;Trusted_Connection=False;TrustServerCertificate=True" //TEST
-    //"AssertDB": "Server=35.193.165.194;Database=assertdb;uid=assertdb-user;pwd=Fdgsh2025%;Trusted_Connection=False;TrustServerCertificate=True"
     "AssertDB": "Server=35.193.165.194;Database=assertdb;uid=assertdb-user;pwd=Fdgsh2025%;Trusted_Connection=False;TrustServerCertificate=True"
   },
   "SystemConfiguration": {
     "AllowedOrigins": [
       "*"
+    ]
+  },
+  "GoogleAuth": {
+    "ClientIds": [
+      //"407408718192.apps.googleusercontent.com"
+      "1090396545242-2baohi0qfsl3mm78ofhg08jqimua7rv0.apps.googleusercontent.com"
+    ],
+    "Secret": [
+      "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"
     ]
   }
 }
