--- a/Assert.UnitTest/Assert.UnitTest.csproj
+++ b/Assert.UnitTest/Assert.UnitTest.csproj
@@ -12,11 +12,21 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.9.0" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.assert" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Assert.API\Assert.API.csproj" />
+    <ProjectReference Include="..\Assert.Application\Assert.Application.csproj" />
     <ProjectReference Include="..\Assert.Domain\Assert.Domain.csproj" />
     <ProjectReference Include="..\Assert.Infrastructure\Assert.Infrastructure.csproj" />
   </ItemGroup>
