feat/add-meta-auth-validator

--- a/Assert.API/appsettings.json
+++ b/Assert.API/appsettings.json
@@ -32,5 +32,13 @@
     "Secret": [
       "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"
     ]
+  },
+  "MetaAuth": {
+    "ClientIds": [
+      "5743d41b363131be28cca8c9e9e13d14"
+    ],
+    "Secret": [
+      "095bba2889ac2400cb6db3bf6953a6b1"
+    ]
   }
 }
