--- a/Assert.API/Assert.API.csproj
+++ b/Assert.API/Assert.API.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\Assert.Application\Assert.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Icons\" />
+  </ItemGroup>
+
 </Project>
