feat/pushh-all-changes

--- a/Assert.API/appsettings.json
+++ b/Assert.API/appsettings.json
@@ -17,7 +17,9 @@
   },
   "ConnectionStrings": {
     //"AssertDB": "Server=.;Database=AssertDB;uid=assert_user;pwd=Passw0rd;Trusted_Connection=False;TrustServerCertificate=True" //TEST
-    "AssertDB": "Server=35.193.165.194;Database=assertdb;uid=assertdb-user;pwd=Fdgsh2025%;Trusted_Connection=False;TrustServerCertificate=True"
+    //"AssertDB": "Server=35.193.165.194;Database=assertdb;uid=assertdb-user;pwd=Fdgsh2025%;Trusted_Connection=False;TrustServerCertificate=True"
+    "AssertDB": "Server=34.58.179.9;Database=assertdb;uid=assertdb-user;pwd=Fdiah2025%$;Trusted_Connection=False;TrustServerCertificate=True"
+
   },
   "SystemConfiguration": {
     "AllowedOrigins": [
