update: Agregar paginación a search. Agregar id a SecurityItems en registro de un listing. Modificar a un path dentro de la aplicación la subida de iamgenes. Cambiar a una referencia dentro de la aplicación las url de las imagenes d elas propiedades.

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 # Ignore content of image directories
 /Assert.API/Resources/Listings/*
 /Assert.API/Resources/*
+/Assert.API/wwwroot/Assert/Resources/Listings
