--- a/Assert.API/Assert.API.csproj
+++ b/Assert.API/Assert.API.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Resources\Icons\" />
+    <Folder Include="wwwroot\Assert\Resources\Listings\" />
   </ItemGroup>
 
 </Project>
