feat/add-endpoint-to-send-email-notification

--- a/Assert.API/appsettings.json
+++ b/Assert.API/appsettings.json
@@ -41,5 +41,11 @@
     "Secret": [
       "095bba2889ac2400cb6db3bf6953a6b1"
     ]
+  },
+  "EmailSettings": {
+    "From": "itReload21@gmail.com",
+    "Password": "yqia ejnd ooqc ekad",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587
   }
 }
