--- a/Assert.Infrastructure/Assert.Infrastructure.csproj
+++ b/Assert.Infrastructure/Assert.Infrastructure.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Common\" />
-    <Folder Include="ExternalServices\" />
     <Folder Include="Mesaging\" />
   </ItemGroup>
 
@@ -24,6 +23,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0-preview.3.25171.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SocketIO.Core" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
