fear(Notification): Implementación de WebSockets con SignalR

--- a/Assert.API/appsettings.json
+++ b/Assert.API/appsettings.json
@@ -25,6 +25,17 @@
       "*"
     ]
   },
+  "SignalR": {
+    "AllowedOrigins": [
+      "http://localhost",
+      "https://localhost:44317",
+      "http://localhost:3000",
+      "https://localhost:3000",
+      "http://127.0.0.1:5500",
+      "http://localhost/SignalRClient",
+      "http://tuotrodominio.com"
+    ]
+  },
   "GoogleAuth": {
     "ClientIds": [
       //"407408718192.apps.googleusercontent.com"
