feat/add-otp-Logic-to-change-and-forgot-pwd

--- a/Assert.Infrastructure/Assert.Infrastructure.csproj
+++ b/Assert.Infrastructure/Assert.Infrastructure.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="External\Notifications\Templates\otpNotification.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="External\Notifications\Templates\otpNotification.html">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Mesaging\" />
   </ItemGroup>
 
