feat(Book): Implementar actualización de estado de reserva a expirado y finalizado

--- a/Assert.API/appsettings.json
+++ b/Assert.API/appsettings.json
@@ -38,6 +38,11 @@
       "https://assert-ui.netlify.app"
     ]
   },
+  "AutomaticExecution": {
+    "Res_ExpirationHours": 24,
+    "Res_CheckIntervalMinutes": 5,
+    "BatchSize": 100
+  },
   "GoogleAuth": {
     "ClientIds": [
       //"407408718192.apps.googleusercontent.com"
