feat/add-otp-logic-to-enrollment-endpoint

--- a/Assert.API/appsettings.json
+++ b/Assert.API/appsettings.json
@@ -62,6 +62,8 @@
     "Port": 587
   },
   "ParamsData": {
-    "DaysRecentlyPublished": 100
+    "DaysRecentlyPublished": 100,
+    "MinStayDefault": 1,
+    "MaxStayDefault": 365
   }
 }
